[package]
name = "project-game"
version = "0.1.0"
authors = ["stackdumper <stackdumper@gmail.com>"]
edition = "2018"

[lib]
name = "pg"
path = "src/lib.rs"

[[bin]]
name = "pg"
path = "src/bin.rs"

[dependencies]
pixels = { git = "https://github.com/parasyte/pixels", rev = "37b90fe6b409cea8b52088bfea537e9d5e27c626" }
specs = "0.16"
beryllium = { version = "0.2.1", features = ["extern_crate_raw_window_handle"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
