[package]
name = "project-game"
version = "0.1.0"
authors = ["stackdumper <stackdumper@gmail.com>"]
edition = "2018"

[lib]
name = "pg"
path = "src/lib.rs"

[[bin]]
name = "pg"
path = "src/bin.rs"

[dependencies]
pixels = "0.0.4"
specs = "0.16"
beryllium = { version = "0.2.1", features = ["extern_crate_raw_window_handle"] }
image = "0.23"
rand = "0.7"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
